<resources>

    <!-- TODO: Usuarios-->
    <string name="Usuarios">Jfinder | Usuários</string>
    <string name="usuario">Usuário</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="cpf">CPF</string>
    <string name="cargo">Cargo</string>
    <string name="cpf2">Insira o CPF</string>

    <string name="CadastrarLogo">Cadastrar | Usuários</string>
    <string name="RemoverLogo">Remover | Usuários</string>
    <string name="BuscarLogo">Buscar | Usuários</string>
    <string name="AlterarLogo">Alterar | Usuários</string>

    <string-array name="relatorio_usuarios_array">
        <item>Nome</item>
        <item>Sobrenome</item>
        <item>Cargo</item>
    </string-array>


    <!-- TODO: Documentos-->
    <string name="Documentos">Jfinder | Documentos</string>
    <string name="documento">Documento</string>
    <string name="numeroUnicoReferencia">Nº Referência</string>
    <string name="numeroUnicoReferencia2">Insira o Nº Referência</string>
    <string name="tipoDeDocumento">Tipo de Documento</string>
    <string name="interessado">Interessado</string>
    <string name="tipoDeArmazenamento">Fisico ou Virtual</string>
    <string name="dataArquivamento">Data Arquivamento</string>
    <string name="descriçãoDocumento">Breve Descrição</string>
    <string name="localCompletoDeArmazenamento">Local de Armazenamento</string>
    <string name="DocumentoAlterar">Alterar | Documentos</string>

    <string name="CadastrarLogoDoc">Cadastrar | Documentos</string>
    <string name="RemoverLogoDoc">Remover | Documentos</string>
    <string name="BuscarLogoDoc">Buscar | Documentos</string>
    <string name="AlterarLogoDoc">Alterar | Documentos</string>

    <string-array name="relatorio_documentos_array">
        <item>Ano</item>
        <item>Tipo</item>
        <item>Interessado</item>
        <item>Palavra-chave</item>
    </string-array>

    <!-- TODO: Relatorios-->
    <string name="Relatorios">Jfinder | Relatórios</string>
    <string name="relatorioUsuarios">Usuarios</string>
    <string name="relatorioDocumentos">Documentos</string>

    <string name="RelatorioLogoUser">Relatório | Usuários</string>
    <string name="RelatorioLogoDoc">Relatório | Documentos</string>

    <!-- TODO: CRUD-->
    <string name="cadastrar">Cadastrar</string>
    <string name="remover">Remover</string>
    <string name="alterar">Alterar</string>
    <string name="buscar">Buscar</string>


    <!-- TODO: OUTROS-->
    <string name="app_name">Jfinder-Mobile</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="Jfinder">Jfinder</string>
    <string name="todo">TODO</string>
    <string name="insira">Insira a busca</string>
    <string name="descricao">Aplicação para gerenciamento de Usuários e Documentos. Contém ferramentas para cadastro, remoção, alteração e consulta de usuários e documentos em um banco de dados. Usuario: user Senha: 123</string>


</resources>