<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocumentoAlterar"
    android:id="@+id/cadastro_Documento"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="67dp"
        android:layout_height="60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/docaltera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="157dp"
        android:layout_height="21dp"
        android:text="@string/DocumentoAlterar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />


    <EditText
        android:id="@+id/num_referencia2"
        style="@style/Edit_Text_Compact_CPF"
        android:layout_marginStart="20dp"
        android:hint="@string/numeroUnicoReferencia2"
        android:inputType="number"
        android:maxLength="11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <EditText
        android:id="@+id/tipoDeDocumento2"
        style="@style/Edit_Text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/tipoDeDocumento"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/interessado2"
        style="@style/Edit_Text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/interessado"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoDeDocumento2" />


    <EditText
        android:id="@+id/tipoDeArmazenamento2"
        style="@style/Edit_Text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/tipoDeArmazenamento"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interessado2" />

    <EditText
        android:id="@+id/dataArquivamento2"
        style="@style/Edit_Text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/dataArquivamento"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoDeArmazenamento2" />

    <EditText
        android:id="@+id/localDeArmazenamento2"
        style="@style/Edit_Text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/localCompletoDeArmazenamento"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataArquivamento2" />

    <EditText
        android:id="@+id/descricaoDocumento2"
        style="@style/Edit_Text_descricao"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/descriçãoDocumento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localDeArmazenamento2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBuscar"
        style="@style/botoes"
        android:layout_marginEnd="20dp"
        android:onClick="bntBuscar"
        android:text="@string/buscar"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        tools:ignore="OnClick" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAlterar"
        style="@style/botoes"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:onClick="btnalterar"
        android:text="@string/alterar"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricaoDocumento2"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>