<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocumentoCadastro"
    android:id="@+id/cadastro_Documento"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="67dp"
        android:layout_height="60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/docadd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="157dp"
        android:layout_height="21dp"
        android:text="@string/CadastrarLogoDoc"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

<!--    <ImageView
        android:id="@+id/logoUsuario"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/docadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoUsuario"
        app:layout_constraintVertical_bias="0.0" />-->

    <EditText
        android:id="@+id/numeroReferencia"
        style="@style/Edit_Text"
        android:layout_marginTop="156dp"
        android:autofillHints=""
        android:hint="@string/numeroUnicoReferencia"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tipoDeDocumento"
        style="@style/Edit_Text"
        android:layout_marginTop="16dp"
        android:hint="@string/tipoDeDocumento"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeroReferencia" />


    <EditText
        android:id="@+id/interessado"
        style="@style/Edit_Text"
        android:layout_marginTop="12dp"
        android:hint="@string/interessado"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoDeDocumento" />

    <EditText
        android:id="@+id/tipoDeArmazenamento"
        style="@style/Edit_Text"
        android:layout_marginTop="16dp"
        android:hint="@string/tipoDeArmazenamento"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interessado" />


    <EditText
        android:id="@+id/dataArquivamento"
        style="@style/Edit_Text"
        android:hint="@string/dataArquivamento"
        android:minHeight="48dp"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoDeArmazenamento" />

    <EditText
        android:id="@+id/localDeArmazenamento"
        style="@style/Edit_Text"
        android:layout_marginTop="16dp"
        android:hint="@string/localCompletoDeArmazenamento"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataArquivamento" />

    <EditText
        android:id="@+id/descricaoDocumento"
        style="@style/Edit_Text_descricao"
        android:layout_marginTop="16dp"
        android:hint="@string/descriçãoDocumento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localDeArmazenamento" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnInsert"
        style="@style/botoes"
        android:layout_marginBottom="36dp"
        android:onClick="bntInserir"
        android:text="@string/cadastrar"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>