<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app2="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:id="@+id/login_tela"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud2"
        tools:context=".UsuarioAlterar">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="59dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/alterarusuario"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.007" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="128dp"
            android:layout_height="23dp"
            android:text="@string/AlterarLogo"
            android:textColor="@color/white"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.0"
            app2:layout_constraintStart_toEndOf="@+id/logo"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintVertical_bias="0.036" />

<!--        <ImageView
            android:id="@+id/logoUsuario"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="148dp"
            android:src="@drawable/usuario"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.498"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent" />-->

    <EditText
        android:id="@+id/nome"
        style="@style/Edit_Text"
        android:layout_marginTop="284dp"
        android:autofillHints=""
        android:hint="@string/nome"
        android:inputType="text"
        android:minHeight="48dp"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/sobrenome"
            style="@style/Edit_Text"
            android:hint="@string/sobrenome"
            android:inputType="text"
            android:minHeight="48dp"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/nome" />


    <EditText
        android:id="@+id/cargo"
        style="@style/Edit_Text"
        android:hint="@string/cargo"
        android:inputType="text"
        android:minHeight="48dp"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/sobrenome" />

<!--    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alterar"
            android:textColor="@color/white"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.501"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/logoUsuario"
            app2:layout_constraintVertical_bias="0.0" />-->


    <EditText
        android:id="@+id/cpf"
        style="@style/Edit_Text_Compact_CPF"
        android:hint="@string/cpf2"
        android:inputType="number"
        android:maxLength="11"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.27" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_buscar"
        style="@style/botoes"
        android:layout_marginEnd="40dp"
        android:onClick="btnbuscar"
        android:text="@string/buscar"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="1.0"
        app2:layout_constraintStart_toEndOf="@+id/cpf"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.27"
        tools:ignore="OnClick" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_alterar"
        style="@style/botoes"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="216dp"
        android:onClick="btnalterar"
        android:text="@string/alterar"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/cargo"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>




