<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".UsuarioBuscar">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="84dp"
        android:layout_height="74dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/folder"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="128dp"
        android:layout_height="23dp"
        android:text="@string/Usuarios"
        android:textColor="@color/white"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintStart_toEndOf="@+id/logo"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.036" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_buscar"
        style="@style/botoes"
        android:layout_marginEnd="16dp"
        android:onClick="btnbuscar"
        android:text="@string/buscar"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.459"
        app2:layout_constraintStart_toEndOf="@+id/cpf_editText"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.745"
        tools:ignore="OnClick" />


    <EditText
        android:id="@+id/cargoText"
        android:layout_width="244dp"
        android:layout_height="47dp"
        android:drawableLeft="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="8dp"
        android:hint="@string/cargo"
        android:textColor="@color/white"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.443"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/cpfText"
        app2:layout_constraintVertical_bias="0.034" />

    <EditText
        android:id="@+id/sobrenomeText"
        android:layout_width="244dp"
        android:layout_height="47dp"
        android:drawableLeft="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="8dp"
        android:hint="@string/sobrenome"
        android:textColor="@color/white"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.443"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/nomeText"
        app2:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/cpfText"
        android:layout_width="244dp"
        android:layout_height="47dp"
        android:drawableLeft="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="8dp"
        android:hint="@string/cpf"
        android:textColor="@color/white"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.449"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/sobrenomeText"
        app2:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/nomeText"
        android:layout_width="244dp"
        android:layout_height="47dp"
        android:autofillHints=""
        android:drawableLeft="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="8dp"
        android:hint="@string/nome"
        android:textColor="@color/white"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.449"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.29" />

    <EditText
        android:id="@+id/cpf_editText"
        style="@style/Edit_Text_Compact_CPF"
        android:layout_marginStart="28dp"
        android:hint="@string/cpf"
        android:inputType="number"
        android:maxLength="11"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/cargoText"
        app2:layout_constraintVertical_bias="0.296" />


</androidx.constraintlayout.widget.ConstraintLayout>