<?xml version="1.0" encoding="utf-8"?>
<!--NestedScrool envelopa toda o conteiner para criar uma barra de rolagem na hora de virar
o celular-->
<androidx.core.widget.NestedScrollView xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    tools:context=".Login"
    tools:ignore="NamespaceTypo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cadastro_usuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud2"
        tools:context=".Login">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/adduser"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.0"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="139dp"
            android:layout_height="21dp"
            android:text="@string/CadastrarLogo"
            android:textColor="@color/white"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.0"
            app2:layout_constraintStart_toEndOf="@+id/logo"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintVertical_bias="0.036" />

<!--        <ImageView
            android:id="@+id/logoUsuario"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="148dp"
            android:src="@drawable/usuario"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.498"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textColor="@color/white"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.501"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/logoUsuario"
            app2:layout_constraintVertical_bias="0.0" />-->

        <EditText
            android:id="@+id/nome"
            style="@style/Edit_Text"
            android:layout_marginTop="196dp"
            android:autofillHints=""
            android:hint="@string/nome"
            android:inputType="text"
            android:minHeight="48dp"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/sobrenome"
            style="@style/Edit_Text"
            android:hint="@string/sobrenome"
            android:inputType="text"
            android:minHeight="48dp"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/nome" />

        <EditText
            android:id="@+id/cpf"
            style="@style/Edit_Text_CPF"
            android:hint="@string/cpf"
            android:inputType="number"
            android:minHeight="48dp"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/sobrenome" />

        <EditText
            android:id="@+id/cargo"
            style="@style/Edit_Text"
            android:hint="@string/cargo"
            android:inputType="text"
            android:minHeight="48dp"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/cpf" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnInsert"
            style="@style/botoes"
            android:onClick="bntInserir"
            android:layout_marginTop="24dp"
            android:text="@string/cadastrar"
            app2:layout_constraintBaseline_toTopOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/cargo"
            tools:ignore="OnClick" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--fechamento do envelopamento-->
</androidx.core.widget.NestedScrollView>


